lab 2 complated
